# QORA-TTS-12Hz-1.7B

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
model/0.6B/: tokenizer.json
model/1.7B/: README.md
src/: audio_features.rs  code_predictor.rs  config.rs  conv.rs  decoder.rs  gemv.rs  generate.rs  generate_new.rs  lib.rs  loader.rs  main.rs  rope.rs  save.rs  speaker_encoder.rs  system.rs  talker.rs  tokenizer.rs  wav.rs
