[package]
name = "qora-tts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qora-tts"
path = "src/main.rs"

[[bin]]
name = "compress_model"
path = "src/bin/compress_model.rs"

[dependencies]
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
safetensors = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
